--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.data=classpath:sql/tag.sql
