complete tag service

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# @formatter:off
+
 server.port=8090
 
 
@@ -13,3 +15,11 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.datasource.data=classpath:sql/tag.sql
+
+###########################################
+###           General Config           ###
+###########################################
+
+messages.cache_seconds=2
+
+messages.use_code_as_default_message=true
