--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -1,5 +1,4 @@
 # @formatter:off
 
 # General Error
-dena.platform.restapi.exception.RESOURCE_NOT_FOUND = Requested resource not available
-dena.platform.restapi.exception.GENERAL = General error occurred in system
+shine.platform.restapi.exception.GENERAL.tagNotFound=Tag not found
