--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -1,4 +1,6 @@
 # @formatter:off
 
 # General Error
-shine.platform.restapi.exception.GENERAL.tagNotFound=Tag not found
+shine.platform.restapi.exception.question.tagNotFound=Tag not found
+shine.platform.restapi.exception.question.titleInvalid=Question title is invalid
+shine.platform.restapi.exception.question.contentInvalid=Question body is invalid
