Add tag service

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.datasource.data=classpath:sql/tag.sql
 messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
+
+
+spring.jpa.mapping-resources=jpa/domain/Question.orm.xml
