--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -4,3 +4,4 @@
 shine.platform.restapi.exception.question.tagNotFound=Tag not found
 shine.platform.restapi.exception.question.titleInvalid=Question title is invalid
 shine.platform.restapi.exception.question.contentInvalid=Question body is invalid
+shine.platform.restapi.exception.question.questionIdInvalid=Question id is invalid
