Add some sql sample

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.datasource.data=classpath:sql/tag.sql
+spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql
 
 ###########################################
 ###           General Config           ###
