Create answer service

--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -1,7 +1,16 @@
 # @formatter:off
 
 # General Error
+shine.platform.restapi.exception.unknownError=Error not found
+
+# General Post Error
+shine.platform.restapi.exception.post.contentInvalid=Question body is invalid
+
+# Question Error
 shine.platform.restapi.exception.question.tagNotFound=Tag not found
 shine.platform.restapi.exception.question.titleInvalid=Question title is invalid
-shine.platform.restapi.exception.question.contentInvalid=Question body is invalid
 shine.platform.restapi.exception.question.questionIdInvalid=Question id is invalid
+
+
+# Answer Error
+shine.platform.restapi.exception.answer.answerIdInvalid=Answer id is invalid
