add CORS support

--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -4,7 +4,7 @@
 shine.platform.restapi.exception.unknownError=Error not found
 
 # General Post Error
-shine.platform.restapi.exception.post.contentInvalid=Question body is invalid
+shine.platform.restapi.exception.post.contentInvalid=Post body is invalid
 
 # Question Error
 shine.platform.restapi.exception.question.tagNotFound=Tag not found
