add voting functionality

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.show-sql=true
 
 spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql
 
+spring.jpa.open-in-view=false
+
 ###########################################
 ###           General Config           ###
 ###########################################
@@ -26,4 +28,4 @@ messages.cache_seconds=2
 messages.use_code_as_default_message=true
 
 
-spring.jpa.mapping-resources=jpa/domain/Question.orm.xml
+spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml 
