--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql
 
