--- a/Client/package.json
+++ b/Client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^11.1.1",
+    "@ckeditor/ckeditor5-react": "^1.0.0",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.2",
