--- a/Client/package.json
+++ b/Client/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^11.1.1",
-    "@ckeditor/ckeditor5-react": "^1.0.0",
     "bootstrap": "^3.3.7",
+    "draft-js": "^0.10.5",
     "font-awesome": "^4.7.0",
+    "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
