change git attribute file

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -13,7 +13,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+
 spring.jpa.show-sql=false
+
 
 spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql
 
@@ -26,6 +29,8 @@ spring.jpa.open-in-view=false
 messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
+
+
 
 
 spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml 
