--- a/Client/package.json
+++ b/Client/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.5.2",
     "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "validate.js": "^0.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
