add find answer for specific question

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -33,4 +33,4 @@ messages.use_code_as_default_message=true
 
 
 
-spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml 
+spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml, jpa/domain/Answer.orm.xml
