sort order of question based on votes, recent views, ...

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -30,6 +30,9 @@ messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
 
+# default sorting question can be 'RECENT_UPDATE', 'MOST_VOTES', 'ANSWER_COUNTS', 'VIEW_COUNTS'
+question.default.sort=RECENT_UPDATE
+
 
 
 
