adding search service

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -34,6 +34,13 @@ messages.use_code_as_default_message=true
 question.default.sort=RECENT_UPDATE
 
 
+###########################################
+###           Search Config             ###
+###########################################
+
+search.defaultPageSize=15
+search.maxPageSize=100
+
 
 
 spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml, jpa/domain/Answer.orm.xml
