adding search page

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.show-sql=false
 
 
-spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql
+spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql, classpath:sql/search.sql
 
 spring.jpa.open-in-view=false
 
