--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
