--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "uuid": "^3.3.2",
     "validate.js": "^0.12.0"
   },
   "scripts": {
