--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 
@@ -30,9 +30,6 @@ spring.jpa.open-in-view=false
 messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
-
-# default sorting question can be 'RECENT_UPDATE', 'MOST_VOTES', 'ANSWER_COUNTS', 'VIEW_COUNTS'
-question.default.sort=RECENT_UPDATE
 
 
 ###########################################
