--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -39,6 +39,11 @@ messages.use_code_as_default_message=true
 search.defaultPageSize=15
 search.maxPageSize=100
 
+###########################################
+###           JWT Config                ###
+###########################################
+jwt.token.validation.period.minute=30
+
 
 
 spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml, jpa/domain/Answer.orm.xml
