--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -43,6 +43,7 @@ search.maxPageSize=100
 ###           JWT Config                ###
 ###########################################
 jwt.token.validation.period.minute=30
+jwt.token.secret.key=shine_jwt_secret_key
 
 
 
