--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -14,3 +14,7 @@ shine.platform.restapi.exception.question.questionIdInvalid=Question id is inval
 
 # Answer Error
 shine.platform.restapi.exception.answer.answerIdInvalid=Answer id is invalid
+
+
+# User Error
+shine.platform.restapi.exception.user.registrations= Error in user registration
