add user sql file

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 
-spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql, classpath:sql/search.sql
+spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql, classpath:sql/search.sql, classpath:sql/user.sql
 
 spring.jpa.open-in-view=false
 
