completing user authentication

--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -17,4 +17,5 @@ shine.platform.restapi.exception.answer.answerIdInvalid=Answer id is invalid
 
 
 # User Error
+shine.platform.restapi.exception.user.unauthenticated=User Not Authenticated
 shine.platform.restapi.exception.user.registrations= Error in user registration
