--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -97,6 +97,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.6</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
