--- a/Client/package.json
+++ b/Client/package.json
@@ -7,6 +7,7 @@
     "draft-js": "^0.10.5",
     "font-awesome": "^4.7.0",
     "immutable": "^4.0.0-rc.12",
+    "jwt-decode": "^2.2.0",
     "prop-types": "^15.6.2",
     "query-string": "^5.1.1",
     "react": "^16.5.2",
