adding user management

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -30,7 +30,6 @@ messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
 
-
 ###########################################
 ###           Search Config             ###
 ###########################################
@@ -44,6 +43,12 @@ search.maxPageSize=100
 jwt.token.validation.period.minute=30
 jwt.token.secret.key=shine_jwt_secret_key
 
+###########################################
+###           Anonymous Config                ###
+###########################################
+anonymous_user_name=anonymous_user
+anonymous_role=anonymous_role
+anonymous_session_id=6a60cae5-fe76-4a65-a541-f75712365528
 
 
 spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml, jpa/domain/Answer.orm.xml
