adding user management

--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -16,6 +16,7 @@ shine.platform.restapi.exception.question.questionIdInvalid=Question id is inval
 shine.platform.restapi.exception.answer.answerIdInvalid=Answer id is invalid
 
 
-# User Error
+# User Management Error
 shine.platform.restapi.exception.user.unauthenticated=User Not Authenticated
+shine.platform.restapi.exception.user.unauthorized = Access Denied
 shine.platform.restapi.exception.user.registrations= Error in user registration
