add google authentication

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -30,6 +30,8 @@ messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
 
+new.user.role=registered_user_role
+
 ###########################################
 ###           Search Config             ###
 ###########################################
@@ -38,17 +40,27 @@ search.defaultPageSize=15
 search.maxPageSize=100
 
 ###########################################
-###           JWT Config                ###
+###           Security Config           ###
 ###########################################
 jwt.token.validation.period.minute=30
 jwt.token.secret.key=shine_jwt_secret_key
 
+spring.security.oauth2.client.registration.google.client-id=513549253706-fb2lma7sg3n089857qo1hsap756137du.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=2Qqoeokj9O4whhVv4P9_zmEN
+spring.security.oauth2.client.registration.google.redirect-uri-template={baseUrl}/oauth2/callback/{registrationId}
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+
+
 ###########################################
-###           Anonymous Config                ###
+###           Anonymous Config          ###
 ###########################################
 anonymous_user_name=anonymous_user
 anonymous_role=anonymous_role
 anonymous_session_id=6a60cae5-fe76-4a65-a541-f75712365528
 
 
-spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml, jpa/domain/Answer.orm.xml
+
+
+spring.jpa.mapping-resources=jpa/domain/Question.orm.xml , jpa/domain/Tag.orm.xml, \
+  jpa/domain/Answer.orm.xml,jpa/domain/User.orm.xml
