add google authentication

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -30,7 +30,7 @@ messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
 
-new.user.role=registered_user_role
+default.user_role=registered_user_role
 
 ###########################################
 ###           Search Config             ###
