--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -29,8 +29,7 @@ spring.jpa.open-in-view=false
 messages.cache_seconds=2
 
 messages.use_code_as_default_message=true
-
-default.user_role=registered_user_role
+default.registeration.user_role=registered_user_role
 
 ###########################################
 ###           Search Config             ###
