--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -52,7 +52,7 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 
 
 ###########################################
-###           Anonymous Config          ###
+###           Anonymous User Config          ###
 ###########################################
 anonymous_user_name=anonymous_user
 anonymous_role=anonymous_role
