adding test for answer controller

--- a/Server/src/main/resources/application-dev.properties
+++ b/Server/src/main/resources/application-dev.properties
@@ -1,5 +1,7 @@
 # @formatter:off
 
+server.port=8090
+
 ###########################################
 ###           Data Access Config        ###
 ###########################################
@@ -17,10 +19,7 @@ spring.jpa.properties.hibernate.jdbc.batch_size=20
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-
-
-spring.jpa.open-in-view=false
-spring.datasource.data=classpath:/init.sql
+spring.datasource.data=classpath:sql/tag.sql, classpath:sql/post.sql, classpath:sql/search.sql, classpath:sql/user.sql
 
 
 ###########################################
