--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -122,6 +122,12 @@
             <version>1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
