adding test for answer controller & fix some bug

--- a/Server/src/main/resources/messages/ErrorCodeMessages.properties
+++ b/Server/src/main/resources/messages/ErrorCodeMessages.properties
@@ -10,6 +10,7 @@ shine.platform.restapi.exception.post.contentInvalid=Post body is invalid
 shine.platform.restapi.exception.question.tagNotFound=Tag not found
 shine.platform.restapi.exception.question.titleInvalid=Question title is invalid
 shine.platform.restapi.exception.question.questionIdInvalid=Question id is invalid
+shine.platform.restapi.exception.question.answerIdInvalid=Answer id is invalid
 
 
 # Answer Error
