--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -128,7 +128,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit-assertj</artifactId>
+            <version>2.8.0</version>
+            <scope>test</scope>
+        </dependency>
 
+        
     </dependencies>
 
     <build>
